# Duolingo

./: CMakeLists.txt  main.cpp  main_window.cpp  main_window.h  model.cpp  model.h  readme.md  resources.qrc  tasks_mode.cpp  tasks_mode.h
QuestionLoaders/: pick_an_option_question_loader.cpp  pick_an_option_question_loader.h
Resources/Questions/: pick_an_option_questions.json
Widgets/: main_page.cpp  main_page.h  number_label.cpp  number_label.h  score_label.cpp  score_label.h  tasks_page.cpp  tasks_page.h
Widgets/TaskWidgets/: pick_an_option.cpp  pick_an_option.h  task_widget.cpp  task_widget.h
